--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Titulo</title>
     <h1>Hola como estas</h1>
+    <p>Este es un parrafo</p>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam corrupti odit aliquam perferendis, facilis doloremque ipsam, harum accusantium laudantium animi magnam iure repudiandae? Reprehenderit, numquam rem. Exercitationem molestiae facere distinctio.</p>
 </head>
