--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Titulo</title>
     <h1>Hola como estas</h1>
     <p>Este es un parrafo</p>
+    <p>Este es otro parrafo</p>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam corrupti odit aliquam perferendis, facilis doloremque ipsam, harum accusantium laudantium animi magnam iure repudiandae? Reprehenderit, numquam rem. Exercitationem molestiae facere distinctio.</p>
 </head>
