Se agrego un parrafo nuevo en la rama my-branch

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <p>Este es un parrafo</p>
     <p>Este es otro parrafo</p>
 
+    <p>Este es un cambio en la rama "my-branch"</p>
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam corrupti odit aliquam perferendis, facilis doloremque ipsam, harum accusantium laudantium animi magnam iure repudiandae? Reprehenderit, numquam rem. Exercitationem molestiae facere distinctio.</p>
 </head>
 <body>
